<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center"
        android:background="@drawable/tab_bg"
        android:gravity="center_vertical" >
        <ImageView
            android:id="@+id/menu_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_item_margin"
            android:layout_weight="1"
            android:contentDescription="@string/News"
            android:src="@drawable/tab_icon_news_3" />
        <ImageView
            android:id="@+id/menu_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_item_margin"
            android:layout_weight="1"
            android:contentDescription="@string/Shop"
            android:src="@drawable/tab_icon_shop" />
        <ImageView
            android:id="@+id/menu_book_shelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_item_margin"
            android:layout_weight="1"
            android:contentDescription="@string/Shelf"
            android:src="@drawable/tab_icon_book" />
        <ImageView
            android:id="@+id/menu_multi_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_item_margin"
            android:layout_weight="1"
            android:contentDescription="@string/Media"
            android:src="@drawable/tab_icon_media" />
        <ImageView
            android:id="@+id/menu_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_item_margin"
            android:layout_weight="1"
            android:contentDescription="@string/More"
            android:src="@drawable/tab_icon_more" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/menuLayout"
        android:background="@drawable/bg" />
</RelativeLayout>